Format Footer, fix collapse nav-bar, edit few title section, and add padding 2%

--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -4,18 +4,21 @@
     --theme-grey: #3e4348;
 }
 
+#brand {
+    background-color: var(--theme-grey);
+}
+
+section:not(#footer){
+    padding: 2%;
+}
+
 footer {
     width: 100%;
-    height: 150px;
+    height: 175px;
+    padding: 0%;
     padding-top: 2%;
     text-align: center;
     background-color: var(--theme-blue);
     color: var(--theme-grey);
-
+    padding-left: 2%;
 }
-
-/*footer p{*/
-/*    */
-/*    background-color: var(--theme-yellow);*/
-/*    background-clip: padding-box;*/
-/*}*/
